# arcus

./: Figma_Prototype_093023.txt  readme.md
Frontend-main/: README.md  collectionSlice.js  package-lock.json  package.json  store.js  tailwind.config.js
Frontend-main/api/: sendMail.js
Frontend-main/components/: AddToVault.jsx  ConnectWallet.jsx  Footer.jsx  Navbar.jsx  Sidebar.jsx  SignUpModal.jsx  YourBorrow.jsx  sendMailButton.jsx
Frontend-main/components/ContractCall/: ContractCallArcusSwap.js  ContractCallArcusWithdraw.js  ContractCallArcusbal.js
Frontend-main/components/DepositModal/: index.js
Frontend-main/components/Footer/: index.js
Frontend-main/components/Header/: index.js
Frontend-main/components/LendingTable/: index.js
Frontend-main/components/LineChart/: index.js
Frontend-main/components/LineChartM/: index.js
Frontend-main/components/StatusBar/: index.js
Frontend-main/components/Tab/: index.js
Frontend-main/components/Tab_About/: index.js
Frontend-main/components/Tab_Historical/: index.js
Frontend-main/hooks/: useHiro.js
Frontend-main/pages/: _app.js  _document.js  index.js
Frontend-main/styles/: globals.css
Frontend-main/utils/: stacks.js
User-Contract/: Clarinet.toml
User-Contract/Contracts/: Clarinet.toml  arcus-swap.clar  contract-details.md  testing-contracts-715.md
backend/: Cargo.toml
backend/src/: borrower.rs  lend_mgr.rs  lender.rs  lending_pool.rs  main.rs
backend/utils/rust-dlc-master/dlc/: Cargo.toml
backend/utils/rust-dlc-master/dlc/src/: lib.rs
backend/utils/rust-dlc-master/dlc/src/channel/: mod.rs
(+18 files in other folders)
